Add : Meta tag for SEO

--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Indira Ananda</title>
-    <script>document.documentElement.classList.add('js')</script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
-    <script src="https://unpkg.com/taos@1.0.5/dist/taos.js"></script>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="icon" href="/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Indira Haeka Ananda</title>
+
+  <meta name="title" content="Indira Haeka Ananda - Portfolio, Creative Works & Rate Card" />
+  <meta name="description"
+    content="Welcome to Indira Ananda's official portfolio. Explore creative projects, skills, experiences in beauty and lifestyle." />
+
+  <!-- SEO Keywords -->
+  <meta name="keywords" content="Indira Haeka Ananda, dira, beauty, lifestyle, portfolio, beauty enthusiast, social advocate, rate card, creative works" />
+
+  <!-- Author -->
+  <meta name="author" content="Indira Haeka Ananda" />
+
+  <!-- Robots (Crawling & Indexing) -->
+  <meta name="robots" content="index, follow" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://indirand.my.id/" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
