--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://indirand.my.id/" />
+  <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
 </head>
 
 <body>
