Update : Remove CDN

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     content="Welcome to Indira Ananda's official portfolio. Explore creative projects, skills, experiences in beauty and lifestyle." />
 
   <!-- SEO Keywords -->
-  <meta name="keywords" content="Indira Haeka Ananda, dira, beauty, lifestyle, portfolio, beauty enthusiast, social advocate, rate card, creative works" />
+  <meta name="keywords"
+    content="Indira Haeka Ananda, dira, beauty, lifestyle, portfolio, beauty enthusiast, social advocate, rate card, creative works" />
 
   <!-- Author -->
   <meta name="author" content="Indira Haeka Ananda" />
@@ -22,12 +23,10 @@
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://indirand.my.id/" />
-  <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
 </head>
 
 <body>
   <div id="root"></div>
-  <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
